Audit fixes: vercel.json, privacy/terms rebranding, .firebaserc, last ANDY05 refs

--- a/index.html
+++ b/index.html
@@ -939,7 +939,7 @@
             const periodName = period === 'semanal' ? 'SEMANAL' : 'MENSUAL';
 
             return [
-                ['ANDY05 — REPORTE FINANCIERO ' + periodName],
+                ['KONTEO 05 — REPORTE FINANCIERO ' + periodName],
                 ['Generado:', new Date().toLocaleString('es-PE')],
                 ['Usuario:', currentUser.email],
                 [],
