--- a/terms.html
+++ b/terms.html
@@ -4,11 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="theme-color" content="#7c3aed">
+    <meta name="theme-color" content="#6d5bff">
     <link rel="manifest" href="/manifest.json">
-    <title>Términos y Condiciones - Mi Dinero</title>
-    <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;500;600;700&display=swap"
-        rel="stylesheet">
+    <title>Términos y Condiciones — Konteo 05</title>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
     <style>
         * {
             margin: 0;
@@ -17,161 +16,148 @@
         }
 
         body {
-            font-family: 'Space Grotesk', sans-serif;
-            background: linear-gradient(140deg, #0f0f23 0%, #1a1a3e 100%);
+            font-family: 'Inter', system-ui, sans-serif;
+            background: #0c0c0f;
             color: #e0e0e0;
             padding: 40px 20px;
-            line-height: 1.7;
+            line-height: 1.8;
         }
 
         .container {
-            max-width: 900px;
+            max-width: 800px;
             margin: 0 auto;
-            background: rgba(20, 20, 40, 0.8);
-            border: 2px solid #7c3aed;
+            background: #16161a;
+            border: 1px solid rgba(255, 255, 255, 0.06);
             border-radius: 20px;
-            padding: 40px;
+            padding: 48px 40px;
         }
 
         h1 {
-            color: #a78bfa;
-            font-size: 2.5rem;
-            margin-bottom: 10px;
+            font-size: 2rem;
+            font-weight: 800;
+            background: linear-gradient(135deg, #6d5bff, #34d399);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+            background-clip: text;
+            margin-bottom: 8px;
         }
 
         .update-date {
-            color: #9ca3af;
-            margin-bottom: 30px;
+            color: #6b7280;
+            margin-bottom: 32px;
+            font-size: 14px;
         }
 
         h2 {
-            color: #7c3aed;
-            margin-top: 30px;
-            margin-bottom: 15px;
-            font-size: 1.5rem;
+            color: #6d5bff;
+            margin-top: 32px;
+            margin-bottom: 12px;
+            font-size: 1.2rem;
+            font-weight: 700;
         }
 
         p,
         li {
-            margin-bottom: 15px;
-            color: #d1d5db;
+            color: #9ca3af;
+            font-size: 15px;
+            margin-bottom: 12px;
         }
 
         ul {
-            margin-left: 25px;
+            padding-left: 20px;
         }
 
-        a {
-            color: #a78bfa;
-            text-decoration: none;
-        }
-
-        a:hover {
-            text-decoration: underline;
+        li {
+            margin-bottom: 8px;
         }
 
         .back-link {
             display: inline-block;
-            margin-top: 30px;
-            padding: 12px 24px;
-            background: #7c3aed;
-            color: white;
-            border-radius: 10px;
+            color: #6d5bff;
             text-decoration: none;
-            transition: all 0.3s;
+            font-weight: 600;
+            margin-top: 32px;
+            padding: 12px 24px;
+            border: 1.5px solid rgba(109, 91, 255, 0.3);
+            border-radius: 10px;
+            transition: all 0.25s;
         }
 
         .back-link:hover {
-            background: #6d28d9;
-            transform: translateY(-2px);
+            background: rgba(109, 91, 255, 0.1);
+            border-color: #6d5bff;
+        }
+
+        @media (max-width: 480px) {
+            .container {
+                padding: 32px 24px;
+            }
+
+            h1 {
+                font-size: 1.6rem;
+            }
         }
     </style>
 </head>
 
 <body>
     <div class="container">
-        <h1>📄 Términos y Condiciones</h1>
-        <p class="update-date">Última actualización: 30 de enero de 2026</p>
+        <h1>Términos y Condiciones</h1>
+        <p class="update-date">Última actualización: Febrero 2026</p>
 
-        <h2>1. Aceptación de los Términos</h2>
-        <p>Al acceder y utilizar Mi Dinero ("la Aplicación"), usted acepta estar sujeto a estos Términos y Condiciones.
-            Si no está de acuerdo con alguna parte de estos términos, no debe utilizar la Aplicación.</p>
+        <h2>1. Aceptación de Términos</h2>
+        <p>Al acceder y utilizar Konteo 05 ("la Aplicación"), usted acepta estar sujeto a estos Términos y Condiciones.
+            Si no está de acuerdo, no utilice la aplicación.</p>
 
         <h2>2. Descripción del Servicio</h2>
-        <p>Mi Dinero es una aplicación web de gestión de finanzas personales que permite a los usuarios:</p>
+        <p>Konteo 05 es una aplicación web de gestión de finanzas personales que permite:</p>
         <ul>
             <li>Registrar ingresos y gastos</li>
-            <li>Categorizar transacciones</li>
-            <li>Generar reportes y gráficos</li>
+            <li>Categorizar transacciones (Fijo, Necesario, Antojo)</li>
+            <li>Filtrar por período (Hoy, Semana, Mes)</li>
             <li>Establecer metas de ahorro</li>
-            <li>Exportar datos a Excel y PDF</li>
+            <li>Exportar reportes en Excel y PDF</li>
+            <li>Visualizar gráficos estadísticos</li>
         </ul>
 
         <h2>3. Cuenta de Usuario</h2>
-        <p>Para utilizar la Aplicación, debe crear una cuenta proporcionando información precisa y actualizada. Usted es
-            responsable de:</p>
-        <ul>
-            <li>Mantener la confidencialidad de su contraseña</li>
-            <li>Todas las actividades que ocurran bajo su cuenta</li>
-            <li>Notificar inmediatamente cualquier uso no autorizado</li>
-        </ul>
+        <p>Para usar Konteo 05 necesitas crear una cuenta con correo electrónico y contraseña. Eres responsable de
+            mantener la confidencialidad de tus credenciales.</p>
 
         <h2>4. Uso Aceptable</h2>
-        <p>Usted se compromete a utilizar la Aplicación únicamente para fines legales y de acuerdo con estos Términos.
-            Está prohibido:</p>
+        <p>Te comprometes a:</p>
         <ul>
-            <li>Intentar acceder a cuentas de otros usuarios</li>
-            <li>Interferir con el funcionamiento de la Aplicación</li>
-            <li>Utilizar la Aplicación para actividades ilegales o fraudulentas</li>
-            <li>Cargar o transmitir virus o códigos maliciosos</li>
+            <li>Proporcionar información veraz</li>
+            <li>No intentar acceder a datos de otros usuarios</li>
+            <li>No usar la aplicación para actividades ilegales</li>
+            <li>No intentar vulnerar la seguridad del sistema</li>
         </ul>
 
-        <h2>5. Privacidad y Datos</h2>
-        <p>El uso de sus datos personales se rige por nuestra <a href="privacy.html">Política de Privacidad</a>. Al
-            utilizar la Aplicación, usted consiente la recopilación y uso de información según lo descrito en dicha
-            política.</p>
+        <h2>5. Propiedad Intelectual</h2>
+        <p>Todo el contenido, diseño y código fuente es propiedad de Konteo 05 y está protegido por leyes de propiedad
+            intelectual.</p>
 
-        <h2>6. Propiedad Intelectual</h2>
-        <p>Todo el contenido de la Aplicación, incluyendo texto, gráficos, logotipos, iconos y software, es propiedad de
-            Mi Dinero y está protegido por leyes de propiedad intelectual.</p>
-
-        <h2>7. Limitación de Responsabilidad</h2>
-        <p>La Aplicación se proporciona "tal cual" y "según disponibilidad". No garantizamos que:</p>
+        <h2>6. Limitación de Responsabilidad</h2>
+        <p>Konteo 05 no se hace responsable por:</p>
         <ul>
-            <li>El servicio será ininterrumpido o libre de errores</li>
-            <li>Los resultados obtenidos serán precisos o confiables</li>
-            <li>Todos los defectos serán corregidos</li>
-        </ul>
-        <p>Mi Dinero no se hace responsable por:</p>
-        <ul>
-            <li>Pérdida de datos</li>
-            <li>Daños indirectos, incidentales o consecuentes</li>
-            <li>Decisiones financieras tomadas basándose en la información de la Aplicación</li>
+            <li>Decisiones financieras basadas en la información de la app</li>
+            <li>Pérdida de datos por causas ajenas a nuestro control</li>
+            <li>Interrupciones temporales del servicio</li>
+            <li>Errores en cálculos realizados por el usuario</li>
         </ul>
 
-        <h2>8. Disponibilidad del Servicio</h2>
-        <p>Nos reservamos el derecho de modificar, suspender o discontinuar temporal o permanentemente la Aplicación (o
-            cualquier parte de ella) con o sin previo aviso. No seremos responsables ante usted o terceros por cualquier
-            modificación, suspensión o discontinuación del servicio.</p>
+        <h2>7. Disponibilidad</h2>
+        <p>Nos esforzamos por mantener el servicio disponible 24/7, pero no garantizamos disponibilidad ininterrumpida.
+            Puede haber mantenimientos programados.</p>
 
-        <h2>9. Modificaciones</h2>
-        <p>Nos reservamos el derecho de modificar estos Términos en cualquier momento. Los cambios entrarán en vigor
-            inmediatamente después de su publicación en la Aplicación. Su uso continuado después de cualquier cambio
-            constituye su aceptación de los nuevos Términos.</p>
+        <h2>8. Modificaciones</h2>
+        <p>Nos reservamos el derecho de modificar estos términos. Los cambios serán efectivos al publicarse en la
+            aplicación.</p>
 
-        <h2>10. Terminación</h2>
-        <p>Podemos suspender o terminar su acceso a la Aplicación inmediatamente, sin previo aviso, por cualquier
-            motivo, incluyendo el incumplimiento de estos Términos.</p>
+        <h2>9. Contacto</h2>
+        <p>Para consultas sobre estos términos, contáctanos a través de nuestra plataforma.</p>
 
-        <h2>11. Ley Aplicable</h2>
-        <p>Estos Términos se regirán e interpretarán de acuerdo con las leyes del Perú, sin dar efecto a ningún
-            principio de conflictos de leyes.</p>
-
-        <h2>12. Contacto</h2>
-        <p>Si tiene preguntas sobre estos Términos, puede contactarnos en:</p>
-        <p>Email: <a href="mailto:soporte@midinero.app">soporte@midinero.app</a></p>
-
-        <a href="/" class="back-link">← Volver a la aplicación</a>
+        <a href="/" class="back-link">← Volver a Konteo 05</a>
     </div>
 </body>
 
